@@ -16,8 +16,7 @@
 package io.airlift.discovery.client;
 
 import io.airlift.configuration.Config;
-
-import javax.validation.constraints.NotNull;
+import jakarta.validation.constraints.NotNull;
 
 public class ServiceSelectorConfig
 {
